src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <formula>IF(AnnualRevenue != null, (10/4), 0) +
IF(DNC_Disclaimer_Recorded__c != false, (10/4), 0) +
IF(TEXT(Industry) != null, (10/4), 0) +
IF(TEXT(RDS_Reason_for_Ownership_Change__c) != null, (10/4), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Information</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Address_Information__c</fullName>
        <formula>IF(Street!= null, (20/5), 0) +
IF(City != null, (20/5), 0) +
IF(State != null, (20/5), 0) +
IF(PostalCode != null, (20/5), 0) +
IF(Country != null, (20/5), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Information</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Address_on_Contract__c</fullName>
        <label>Address On Contract</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( NOT( ISBLANK( Date_of_Birth__c ) ) ,
  IF( DATE( 2000 , MONTH( Date_of_Birth__c ) , DAY( Date_of_Birth__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( Date_of_Birth__c ),
     YEAR (Today()) - YEAR ( Date_of_Birth__c ) -1 ),
  null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allow_Conversion_to_the_Lead_object__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Conversion to the Lead object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Rejected__c</fullName>
        <label>Approved/Rejected</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <picklist>
            <controllingField>Requirement__c</controllingField>
            <picklistValues>
                <fullName>&lt; 1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1500 to 3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000 to 5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5000 to 10000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10000 to 25000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25000 to 50000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50000 to 100000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 100000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Association_Membership_Type__c</fullName>
        <label>Association Membership Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Email__c</fullName>
        <formula>Existing_Channel_Partner__r.Email__c</formula>
        <label>Email Broker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Phone__c</fullName>
        <formula>Existing_Channel_Partner__r.Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_In_lacs__c</fullName>
        <label>Budget (In lacs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Salaried__c</fullName>
        <label>Business/Salaried</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salaried</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Rating__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Call Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calling_from_Place__c</fullName>
        <label>Suburb (R)</label>
        <picklist>
            <picklistValues>
                <fullName>Airoli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altamount Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambernath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambivali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andheri(E)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andheri(W)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andheri Kurla Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asangaon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azad Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babulnath Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badlapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badlapur East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badlapur West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balkum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballard Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bandra(E)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bandra(W)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bandra Kurla Complex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhandup(E)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhandup(W)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhayander East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhayander West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhivpuri Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhiwandi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhulabhai Desai Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhuleshwar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhuleswar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boisar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borivali(E)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <label>Campaign Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capture_Point__c</fullName>
        <label>Capture Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Company__c</fullName>
        <formula>Existing_Channel_Partner__r.Company_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner</label>
        <referenceTo>Channel_Partner__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Circle__c</fullName>
        <label>Circle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_R__c</fullName>
        <label>City</label>
        <picklist>
            <controllingField>Residential_State_Province__c</controllingField>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Port Blair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amalapuram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anakapalle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anantapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bapatla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bheemunipatnam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhimavaram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bobbili</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chilakaluripet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chirala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chittoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuddapah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dharmavaram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eluru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gooty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gudivada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gudur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntakal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hanamkonda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindupur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaggaiahpet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammalamadugu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kadapa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kadiri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kakinada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kandukur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kavali</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Field to capture the company name of the customer. we dont want to use the std company field as that will convert it into a business account</description>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number_Ref1__c</fullName>
        <label>Contact Number Ref1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Number_Ref2__c</fullName>
        <label>Contact Number Ref2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <formula>Existing_Channel_Partner__r.Mobile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_R__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Apartment_Type__c</fullName>
        <label>Current Property Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Bedroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Bedroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Bedroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Bedroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Bedroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent House</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Project_Preference__c</fullName>
        <label>Customer Project Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Investor Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft Launch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNC_Disclaimer_Recorded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is for the CCE to check once DNC Disclaimer is recorded on customer call and customer has given concent.</description>
        <label>DNC Disclaimer Recorded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DND__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_visit__c</fullName>
        <label>Date Of Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <picklist>
            <picklistValues>
                <fullName>Acountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Proj Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Vice President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asst. General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asst. Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairman cum Managing Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chartered Accountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Executive Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Financial Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Investment Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Marketing Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Operating Officer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Created_Date__c</fullName>
        <label>Duplicate Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duplicate_Enquiry_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates whether a new duplicate enq has been recd</description>
        <label>Duplicate Enquiry Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Received_Date__c</fullName>
        <description>last date on which a duplicate enq was received</description>
        <label>Duplicate Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DuplicatesIdentified__c</fullName>
        <label>DuplicatesIdentified</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Education_Level__c</fullName>
        <label>Education Level</label>
        <picklist>
            <picklistValues>
                <fullName>Undergraduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Graduate</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Ref1__c</fullName>
        <label>Email Ref1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Ref2__c</fullName>
        <label>Email Ref2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <label>Employee Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Bengali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marathi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marwari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muslim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Indian Hindu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parsi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sindhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Indian Hindu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Existing_Channel_Partner_Code__c</fullName>
        <formula>Existing_Channel_Partner__r.Broker_Code__c</formula>
        <label>Existing Channel Partner Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Channel_Partner_Company__c</fullName>
        <formula>Existing_Channel_Partner__r.Company_Name__c</formula>
        <label>Existing Channel Partner Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Channel_Partner_Contact_Number__c</fullName>
        <formula>Existing_Channel_Partner__r.Mobile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Existing Channel Partner Contact Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Channel_Partner_Email__c</fullName>
        <formula>Existing_Channel_Partner__r.Email__c</formula>
        <label>Existing Channel Partner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Channel_Partner_Phone__c</fullName>
        <formula>Existing_Channel_Partner__r.Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Existing Channel Partner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing Channel Partner</label>
        <referenceTo>Broker__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Existing_Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Existing_Solitaire_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Solitaire Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exp_Closure_Month__c</fullName>
        <label>Exp Closure Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_up_date__c</fullName>
        <label>Follow Up Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Form_Navigator__c</fullName>
        <formula>IMAGE(&apos;/resource/GreenNavImage&apos;, &apos;Test&apos;, 10, ( Total_Page__c * 100 )) &amp;
IMAGE(&apos;/resource/RedNavImage&apos;, &apos;Test&apos;, 10, (100 - Total_Page__c * 100 )) &amp;
&apos; &apos; &amp;
TEXT (round(Total_Page__c * 100,2)) &amp;
&apos;%&apos;</formula>
        <label>Form % Navigator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Billing_Mailing_Address_c__c</fullName>
        <label>Billing/Mailing Address (R)</label>
        <picklist>
            <picklistValues>
                <fullName>Billing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Owner__c</fullName>
        <label>Home Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Address_Web2Lead__c</fullName>
        <label>IP Address Web2Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Level__c</fullName>
        <label>Income Level</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;30 Lacs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-60 Lacs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;60 Lacs</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsCreatedAutomatically__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Created Automatically</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFirstPresalesCall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsFirstPresalesCall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LL_FWP__c</fullName>
        <label>LL/FWP</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Call_Attempt_Date__c</fullName>
        <label>Last Call Attempt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Call_Attempt_Status_1__c</fullName>
        <label>Last Call Attempt Status</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>